config/kubernetes/qa/service.yml
apiVersion: v1
kind: Service
metadata:
  name: disclosure-checker-service-qa
  namespace: disclosure-checker-qa
  labels:
    app: disclosure-checker-web-qa
spec:
  ports:
  - port: 80
    name: http
    targetPort: 3000
  selector:
    app: disclosure-checker-web-qa
