config/kubernetes/qa/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: disclosure-checker-ingress-qa
  namespace: disclosure-checker-qa
  annotations:
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    external-dns.alpha.kubernetes.io/set-identifier: disclosure-checker-ingress-qa-disclosure-checker-qa-green
    external-dns.alpha.kubernetes.io/aws-weight: "100"
    nginx.ingress.kubernetes.io/server-snippet: |
      location = /.well-known/security.txt {
        return 301 https://raw.githubusercontent.com/ministryofjustice/security-guidance/main/contact/vulnerability-disclosure-security.txt;
      }
      location ~* \.(php|cgi|xml)$ {
        deny all; access_log off;
      }
    nginx.ingress.kubernetes.io/enable-modsecurity: "true"
    nginx.ingress.kubernetes.io/modsecurity-snippet: |
      SecAuditEngine On
      SecRuleEngine DetectionOnly
      SecDefaultAction "phase:2,pass,log,tag:github_team=central-digital-product-team,tag:namespace=disclosure-checker-qa"
spec:
  ingressClassName: modsec
  tls:
  - hosts:
    - disclosure-checker-qa.apps.live.cloud-platform.service.justice.gov.uk
  rules:
  - host: disclosure-checker-qa.apps.live.cloud-platform.service.justice.gov.uk
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: disclosure-checker-service-qa
            port:
              number: 80
